tests/tour-of-wgsl/for.wgsl.snap
error: Expected expression, found 'for'.

  for (var i = 0; i < 10; i++) {
  ~~~
error: Expected statement, found 'for'.

  for (var i = 0; i < 10; i++) {
  ~~~
